
Changelog
=========

4.1.0 (unreleased)
------------------

- Reworked OrgUnit Selector:
    - Store current unit to regular cookie instead of using the session_data_manager.
    - Differentiate between users_units (selectable) and admin_unit's org_unit
      (current org_unit).
    - Change current org_unit functionality, the current orgunit has to be
      part of the current admin_unit.

  [phgross]

- Made schemamigrations to 4.0.x release oracle compatible.
  [phgross]

- Fixed transporting task with the OGDS Transporter beetwen different admin_units.
  [phgross]

- Added monkeypatch for _verifyObjectPaste to allow moving content
  without delete objects permission.
  [phgross]

- Revoke delete objects permission for dossiers.
  [phgross]

- Adjust delete objects permission for repositories.
  [phgross]

- Adjust global role mapping for delete objects permission.
  [phgross]

- Add repository delete action and confirmation view.
  [phgross]

- Revoke list folder contents permission for Administrators on repository.
  [phgross]

- Made the AddPublicTrialColumn more robust.
  [phgross]

- Dropped no longer used document state journalization.
  [phgross]

- Added journalization for document removing and restoring.
  [phgross]

- Added new mail workflow state `mail-state-removed`.
  [phgross]

- Add new action `Remove` to trash tab and add remove confirmation view.
  [phgross]

- Added new document workflow state `document-state-removed`.
  [phgross]

- Add new permission `Remove GEVER content`.
  [phgross]

- Disable docproperty updating in YearfolderStorer process.
  [phgross]

- Rewrite gever setup.
    - Introduce two zcml directives to configure deployments and ldap profiles.
    - Simplify deloyment form, remove multi-client configuration options.
    - Update branding, add onegovgever logo.
    - Add custom setuphandlers for local roles, initial repository and document templates.