@@ -1,4 +1,6 @@
+from sqlalchemy import exc
 from sqlalchemy.event import listen
+from sqlalchemy.pool import Pool
 
 
 def alter_session_on_connect(dbapi_connection, connection_record):
@@ -18,6 +20,21 @@ def setup_isolation_level_on_connect(dbapi_connection, connection_record):
     dbapi_connection.isolation_level = None
 
 
+def ping_connection(dbapi_connection, connection_record, connection_proxy):
+    # Invalidate stale database connections checked out from the pool
+    # Helps us deal with "MySQL has gone away" error
+    # See:
+    # http://docs.sqlalchemy.org/en/rel_0_7/core/pooling.html#disconnect-handling-pessimistic
+    cursor = dbapi_connection.cursor()
+    try:
+        cursor.execute("SELECT 1")
+    except:
+        # raise DisconnectionError - pool will try
+        # connecting again up to three times before raising.
+        raise exc.DisconnectionError()
+    cursor.close()
+
+
 def setup_engine_options(event):
     """Setup engine / connection options.
         - collation for ORACLE engines
@@ -30,3 +47,6 @@ def setup_engine_options(event):
 
     elif engine.name == 'sqlite':
         listen(engine, 'connect', setup_isolation_level_on_connect)
+
+    elif engine.name == 'mysql':
+        listen(Pool, 'checkout', ping_connection)
